Readme todo list

--- a/README
+++ b/README
@@ -8,3 +8,13 @@
 - Comment integration
 
 - RSS Integration
+
+- Pagination
+
+- Forking (reblogging) and diffs
+
+- Org level blogs
+
+- Login to customize
+
+- Tagging (maybe with post titles?)
